// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventBusResourcePolicy Snapshot — org-scoped access 1`] = `
{
  "Resources": {
    "testbusorgsnapshot203C2631": {
      "Properties": {
        "Name": "K9EventBusOrgSnapshottestbusorgsnapshot0DB4F33A",
      },
      "Type": "AWS::Events::EventBus",
    },
    "testbusorgsnapshotcdkAllowRestrictedadministerresource29B5EAEA": {
      "Properties": {
        "EventBusName": {
          "Ref": "testbusorgsnapshot203C2631",
        },
        "Statement": {
          "Action": [
            "events:AllowVendedLogDeliveryForResource",
            "events:CreateArchive",
            "events:CreateEventBus",
            "events:DeleteEventBus",
            "events:TagResource",
            "events:UntagResource",
            "events:UpdateEventBus",
          ],
          "Condition": {
            "ArnEquals": {
              "aws:PrincipalArn": [
                "arn:aws:iam::139710491120:role/ci",
                "arn:aws:iam::139710491120:role/k9-dev-appeng",
              ],
            },
          },
          "Effect": "Allow",
          "Principal": {
            "AWS": "*",
          },
          "Resource": "*",
          "Sid": "cdk-Allow Restricted administer-resource",
        },
        "StatementId": "cdk-Allow Restricted administer-resource",
      },
      "Type": "AWS::Events::EventBusPolicy",
    },
    "testbusorgsnapshotcdkAllowRestrictedreadconfigDAAEB966": {
      "Properties": {
        "EventBusName": {
          "Ref": "testbusorgsnapshot203C2631",
        },
        "Statement": {
          "Action": [
            "events:DescribeEventBus",
            "events:ListTagsForResource",
          ],
          "Condition": {
            "ArnEquals": {
              "aws:PrincipalArn": [
                "arn:aws:iam::139710491120:role/ci",
                "arn:aws:iam::139710491120:role/k9-dev-appeng",
              ],
            },
          },
          "Effect": "Allow",
          "Principal": {
            "AWS": "*",
          },
          "Resource": "*",
          "Sid": "cdk-Allow Restricted read-config",
        },
        "StatementId": "cdk-Allow Restricted read-config",
      },
      "Type": "AWS::Events::EventBusPolicy",
    },
    "testbusorgsnapshotcdkAllowRestrictedwritedataB95B5739": {
      "Properties": {
        "EventBusName": {
          "Ref": "testbusorgsnapshot203C2631",
        },
        "Statement": {
          "Action": [
            "events:CreateArchive",
            "events:PutEvents",
            "events:StartReplay",
          ],
          "Condition": {
            "StringEquals": {
              "aws:PrincipalOrgID": [
                "o-abc123",
              ],
            },
          },
          "Effect": "Allow",
          "Principal": {
            "AWS": "*",
          },
          "Resource": "*",
          "Sid": "cdk-Allow Restricted write-data",
        },
        "StatementId": "cdk-Allow Restricted write-data",
      },
      "Type": "AWS::Events::EventBusPolicy",
    },
  },
}
`;

exports[`EventBusResourcePolicy Snapshot — typical usage 1`] = `
{
  "Resources": {
    "testbussnapshot31E5750E": {
      "Properties": {
        "Name": "K9EventBusSnapshottestbussnapshot9644679A",
      },
      "Type": "AWS::Events::EventBus",
    },
    "testbussnapshotcdkAllowRestrictedadministerresource26159C5B": {
      "Properties": {
        "EventBusName": {
          "Ref": "testbussnapshot31E5750E",
        },
        "Statement": {
          "Action": [
            "events:AllowVendedLogDeliveryForResource",
            "events:CreateArchive",
            "events:CreateEventBus",
            "events:DeleteEventBus",
            "events:TagResource",
            "events:UntagResource",
            "events:UpdateEventBus",
          ],
          "Condition": {
            "ArnEquals": {
              "aws:PrincipalArn": [
                "arn:aws:iam::139710491120:role/ci",
                "arn:aws:iam::139710491120:role/k9-dev-appeng",
              ],
            },
          },
          "Effect": "Allow",
          "Principal": {
            "AWS": "*",
          },
          "Resource": "*",
          "Sid": "cdk-Allow Restricted administer-resource",
        },
        "StatementId": "cdk-Allow Restricted administer-resource",
      },
      "Type": "AWS::Events::EventBusPolicy",
    },
    "testbussnapshotcdkAllowRestrictedreadconfig1E221F1F": {
      "Properties": {
        "EventBusName": {
          "Ref": "testbussnapshot31E5750E",
        },
        "Statement": {
          "Action": [
            "events:DescribeEventBus",
            "events:ListTagsForResource",
          ],
          "Condition": {
            "ArnEquals": {
              "aws:PrincipalArn": [
                "arn:aws:iam::139710491120:role/ci",
                "arn:aws:iam::139710491120:role/k9-dev-appeng",
              ],
            },
          },
          "Effect": "Allow",
          "Principal": {
            "AWS": "*",
          },
          "Resource": "*",
          "Sid": "cdk-Allow Restricted read-config",
        },
        "StatementId": "cdk-Allow Restricted read-config",
      },
      "Type": "AWS::Events::EventBusPolicy",
    },
    "testbussnapshotcdkAllowRestrictedwritedata02FB3846": {
      "Properties": {
        "EventBusName": {
          "Ref": "testbussnapshot31E5750E",
        },
        "Statement": {
          "Action": [
            "events:CreateArchive",
            "events:PutEvents",
            "events:StartReplay",
          ],
          "Condition": {
            "ArnEquals": {
              "aws:PrincipalArn": [
                "arn:aws:iam::123456789012:role/app-backend",
              ],
            },
          },
          "Effect": "Allow",
          "Principal": {
            "AWS": "*",
          },
          "Resource": "*",
          "Sid": "cdk-Allow Restricted write-data",
        },
        "StatementId": "cdk-Allow Restricted write-data",
      },
      "Type": "AWS::Events::EventBusPolicy",
    },
    "testbussnapshotcdkDenyEveryoneElse970AA208": {
      "Properties": {
        "EventBusName": {
          "Ref": "testbussnapshot31E5750E",
        },
        "Statement": {
          "Action": "events:*",
          "Condition": {
            "ArnNotEquals": {
              "aws:PrincipalArn": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
                "arn:aws:iam::139710491120:role/ci",
                "arn:aws:iam::139710491120:role/k9-dev-appeng",
                "arn:aws:iam::123456789012:role/app-backend",
              ],
            },
            "Bool": {
              "aws:PrincipalIsAWSService": [
                "false",
              ],
            },
          },
          "Effect": "Deny",
          "Principal": {
            "AWS": [
              "*",
              "*",
            ],
          },
          "Resource": "*",
          "Sid": "cdk-DenyEveryoneElse",
        },
        "StatementId": "cdk-DenyEveryoneElse",
      },
      "Type": "AWS::Events::EventBusPolicy",
    },
  },
}
`;

exports[`EventBusResourcePolicy Typical usage — specific principals, no org constraint 1`] = `
{
  "Resources": {
    "testbustypicalusage6B2659F6": {
      "Properties": {
        "Name": "K9EventBusTypicalUsagetestbustypicalusageD3F8CAD4",
      },
      "Type": "AWS::Events::EventBus",
    },
    "testbustypicalusagecdkAllowRestrictedadministerresource1C50EB6C": {
      "Properties": {
        "EventBusName": {
          "Ref": "testbustypicalusage6B2659F6",
        },
        "Statement": {
          "Action": [
            "events:AllowVendedLogDeliveryForResource",
            "events:CreateArchive",
            "events:CreateEventBus",
            "events:DeleteEventBus",
            "events:TagResource",
            "events:UntagResource",
            "events:UpdateEventBus",
          ],
          "Condition": {
            "ArnEquals": {
              "aws:PrincipalArn": [
                "arn:aws:iam::139710491120:role/ci",
                "arn:aws:iam::139710491120:role/k9-dev-appeng",
              ],
            },
          },
          "Effect": "Allow",
          "Principal": {
            "AWS": "*",
          },
          "Resource": "*",
          "Sid": "cdk-Allow Restricted administer-resource",
        },
        "StatementId": "cdk-Allow Restricted administer-resource",
      },
      "Type": "AWS::Events::EventBusPolicy",
    },
    "testbustypicalusagecdkAllowRestrictedreadconfigCDBD6FD1": {
      "Properties": {
        "EventBusName": {
          "Ref": "testbustypicalusage6B2659F6",
        },
        "Statement": {
          "Action": [
            "events:DescribeEventBus",
            "events:ListTagsForResource",
          ],
          "Condition": {
            "ArnEquals": {
              "aws:PrincipalArn": [
                "arn:aws:iam::139710491120:role/ci",
                "arn:aws:iam::139710491120:role/k9-dev-appeng",
              ],
            },
          },
          "Effect": "Allow",
          "Principal": {
            "AWS": "*",
          },
          "Resource": "*",
          "Sid": "cdk-Allow Restricted read-config",
        },
        "StatementId": "cdk-Allow Restricted read-config",
      },
      "Type": "AWS::Events::EventBusPolicy",
    },
    "testbustypicalusagecdkAllowRestrictedwritedata01027E6F": {
      "Properties": {
        "EventBusName": {
          "Ref": "testbustypicalusage6B2659F6",
        },
        "Statement": {
          "Action": [
            "events:CreateArchive",
            "events:PutEvents",
            "events:StartReplay",
          ],
          "Condition": {
            "ArnEquals": {
              "aws:PrincipalArn": [
                "arn:aws:iam::123456789012:role/app-backend",
              ],
            },
          },
          "Effect": "Allow",
          "Principal": {
            "AWS": "*",
          },
          "Resource": "*",
          "Sid": "cdk-Allow Restricted write-data",
        },
        "StatementId": "cdk-Allow Restricted write-data",
      },
      "Type": "AWS::Events::EventBusPolicy",
    },
    "testbustypicalusagecdkDenyEveryoneElse4D511C9F": {
      "Properties": {
        "EventBusName": {
          "Ref": "testbustypicalusage6B2659F6",
        },
        "Statement": {
          "Action": "events:*",
          "Condition": {
            "ArnNotEquals": {
              "aws:PrincipalArn": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
                "arn:aws:iam::139710491120:role/ci",
                "arn:aws:iam::139710491120:role/k9-dev-appeng",
                "arn:aws:iam::123456789012:role/app-backend",
              ],
            },
            "Bool": {
              "aws:PrincipalIsAWSService": [
                "false",
              ],
            },
          },
          "Effect": "Deny",
          "Principal": {
            "AWS": [
              "*",
              "*",
            ],
          },
          "Resource": "*",
          "Sid": "cdk-DenyEveryoneElse",
        },
        "StatementId": "cdk-DenyEveryoneElse",
      },
      "Type": "AWS::Events::EventBusPolicy",
    },
  },
}
`;
